--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>VPN Config Generator</title>
+  <title>WireGuard Config Generator</title>
 </head>
 
 <body>
