--- a/index.html
+++ b/index.html
@@ -399,10 +399,8 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>WireGuard Config Generator</strong> 基于以下项目构建：
-        <a href="https://github.com/dbca-wa/wg-webcfg">wg-webcfg</a> 和
-        <a href="https://github.com/kiler129/mikrotik-auto-wireguard">mikrotik-auto-wireguard</a>
-      </p>
+        <strong>项目地址:</strong>
+        <a href="https://github.com/hausen1012/wg-config-generator">wg-config-generator</a>
     </div>
   </footer>
 
