fix：修复已知问题

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <span class="icon"><i class="fas fa-download"></i></span>
                     <span>下载客户端配置</span>
                   </button>
-                  <button class="button is-danger" v-if="!peerDlbuttonshidden" @click="clearCache">
+                  <button class="button is-danger" @click="clearCache">
                     <span class="icon"><i class="fas fa-trash"></i></span>
                     <span>清空缓存</span>
                   </button>
